[gd_scene load_steps=44 format=3 uid="uid://depodrve142og"]

[ext_resource type="Script" uid="uid://dvvqyqpf64lge" path="res://scripts/player.gd" id="1_merdl"]
[ext_resource type="Texture2D" uid="uid://px2iu3718vdq" path="res://sprites/Cogumelo/Idle (16 x 16).png" id="2_b0kkn"]
[ext_resource type="Texture2D" uid="uid://h1f7lste1xqf" path="res://sprites/Prota_Jogo/dead.png" id="2_dchgp"]
[ext_resource type="Texture2D" uid="uid://b8r1b3bsd5qj6" path="res://sprites/Cogumelo/Camouflaged (16 x 16).png" id="2_qly61"]
[ext_resource type="Texture2D" uid="uid://fmjkqf3f14vx" path="res://sprites/Cogumelo/Hurt (16 x 16).png" id="2_qsoyl"]
[ext_resource type="Texture2D" uid="uid://ddpy42fldjhmo" path="res://sprites/Cogumelo/Running (16 x 16).png" id="3_e4p34"]
[ext_resource type="Texture2D" uid="uid://b0llyb022fy3k" path="res://sprites/Cogumelo/Jumping (16 x 16).png" id="3_rfe5m"]
[ext_resource type="Texture2D" uid="uid://mf83tqglay30" path="res://sprites/Prota_Jogo/idle.png" id="4_x08pd"]
[ext_resource type="Texture2D" uid="uid://d1a7xjxjr1pnh" path="res://sprites/Prota_Jogo/walk.png" id="6_tjdhl"]
[ext_resource type="AudioStream" uid="uid://dcpa02yndvx2v" path="res://sounds/jump_sound.wav" id="7_6nm46"]
[ext_resource type="Texture2D" uid="uid://2g0efk56xxrg" path="res://sprites/Prota_Jogo/jump.png" id="7_kdgjc"]
[ext_resource type="AudioStream" uid="uid://up21w7vrbg22" path="res://sounds/damage_sound.wav" id="8_i623q"]
[ext_resource type="AudioStream" uid="uid://5sglakh264un" path="res://sounds/loser_sound.wav" id="9_ef06p"]

[sub_resource type="AtlasTexture" id="AtlasTexture_28s6d"]
atlas = ExtResource("2_dchgp")
region = Rect2(0, 0, 64, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_cicqb"]
atlas = ExtResource("2_dchgp")
region = Rect2(64, 0, 64, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_hj0ki"]
atlas = ExtResource("2_dchgp")
region = Rect2(128, 0, 64, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_fruft"]
atlas = ExtResource("2_dchgp")
region = Rect2(192, 0, 64, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rie4"]
atlas = ExtResource("4_x08pd")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp3pk"]
atlas = ExtResource("4_x08pd")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgp7q"]
atlas = ExtResource("4_x08pd")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1n8aq"]
atlas = ExtResource("4_x08pd")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4p34"]
atlas = ExtResource("2_b0kkn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfe5m"]
atlas = ExtResource("2_b0kkn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qly61"]
atlas = ExtResource("2_b0kkn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_slxql"]
atlas = ExtResource("7_kdgjc")
region = Rect2(0, 0, 64, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_evlff"]
atlas = ExtResource("7_kdgjc")
region = Rect2(64, 0, 64, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_7db53"]
atlas = ExtResource("7_kdgjc")
region = Rect2(128, 0, 64, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_plaij"]
atlas = ExtResource("7_kdgjc")
region = Rect2(192, 0, 64, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_dchgp"]
atlas = ExtResource("3_rfe5m")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdgjc"]
atlas = ExtResource("6_tjdhl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0i8f"]
atlas = ExtResource("6_tjdhl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0i614"]
atlas = ExtResource("6_tjdhl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprnr"]
atlas = ExtResource("6_tjdhl")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsoyl"]
atlas = ExtResource("3_e4p34")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nm46"]
atlas = ExtResource("3_e4p34")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i623q"]
atlas = ExtResource("3_e4p34")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef06p"]
atlas = ExtResource("3_e4p34")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjdhl"]
atlas = ExtResource("3_e4p34")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x08pd"]
atlas = ExtResource("3_e4p34")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qsoyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_28s6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cicqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hj0ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fruft")
}],
"loop": true,
"name": &"dead",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qsoyl")
}, {
"duration": 1.0,
"texture": ExtResource("2_qly61")
}],
"loop": false,
"name": &"dead2",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qly61")
}],
"loop": false,
"name": &"duck",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rie4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp3pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgp7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1n8aq")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4p34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfe5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qly61")
}],
"loop": true,
"name": &"idle2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_slxql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evlff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7db53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plaij")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dchgp")
}],
"loop": true,
"name": &"jump2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdgjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0i8f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0i614")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprnr")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsoyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nm46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i623q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef06p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjdhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x08pd")
}],
"loop": true,
"name": &"walk2",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u3f3p"]
radius = 5.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsoyl"]
size = Vector2(14, 16.5)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kdgjc"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 1
collision_layer = 2
collision_mask = 77
script = ExtResource("1_merdl")

[node name="anim" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_qsoyl")
animation = &"dead"

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_u3f3p")

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="collision" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -1.25)
shape = SubResource("RectangleShape2D_qsoyl")
debug_color = Color(0.6234723, 0, 0.121626206, 0.41960785)

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(5, 4)
target_position = Vector2(4, 0)
collision_mask = 4

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-5, 4)
target_position = Vector2(-4, 0)
collision_mask = 4

[node name="audios" type="Node" parent="."]

[node name="jump_sfx" type="AudioStreamPlayer" parent="audios"]
stream = ExtResource("7_6nm46")
volume_db = -32.203

[node name="damage_sfx" type="AudioStreamPlayer" parent="audios"]
stream = ExtResource("8_i623q")
volume_db = -14.857

[node name="loser_sfx" type="AudioStreamPlayer" parent="audios"]
stream = ExtResource("9_ef06p")
volume_db = -7.82

[node name="interaction_area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="interaction_area"]
shape = SubResource("CapsuleShape2D_kdgjc")
debug_color = Color(0.81960785, 0.9607843, 1, 0.47058824)

[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
